# MST-Artifact-SC23

./: README.md  build_prereqs.sh  generate_compare_tables.py  generate_deoptimize_tables.py  run_all_compare.sh  run_all_deoptimize.sh  set_up.sh
Deoptimizations/: ECL_MST_NoAtomicGuards.cu  ECL_MST_NoAtomicGuards_NoWarp_NoFilter_NoImplicitPathCompression.cu  ECL_MST_NoAtomicGuards_NoWarp_NoFilter_NoImplicitPathCompression_NoOneDirection_NoTuples_NoDataDriven.cu  ECLgraph.h  build_ECL-MST_deopts.sh  run_all_ECL-MST_deopts.sh
ECL-MST/: ECL_MST.cu  build_ECL-MST.sh  run_all_ECL-MST.sh
ECL-MST/Deoptimizations/: README.md  build_ECL-MST_deopts.sh  mst_50.cu  mst_50_NoAtomicGuards_NoWarp.cu  mst_50_NoAtomicGuards_NoWarp_NoFilter.cu  mst_50_NoAtomicGuards_NoWarp_NoFilter_NoImplicitPathCompression_NoOneDirection.cu  (+2 more)
Gunrock_GPU/: build_Gunrock.sh  mst.cu  run_all_Gunrock.sh
Gunrock_GPU/inputs/: ecl2mtx_genweights_cugraph.cpp
Inputs/: download_inputs.sh
Jucele_GPU/: JuceleMST.cu  build_Jucele.sh  run_all_Jucele.sh
Lonestar_CPU/: README.md  build_Lonestar.sh  parse_output_lonestar.py  run_all_Lonestar.sh  run_ls_cpu.sh
PBBS_CPU/: build_PBBS.sh  parse_output_pbbs_both_cpu.py  run_all.sh  run_all_PBBS.sh
UMinho_BOTH/: Makefile  build_UMinho.sh  run_all_UMinho.sh
cuGraph_GPU/: README.md  build_cuGraph.sh  cuGraph_mst_code.cu  cugraph_double  mst_test.cu  parse_output_cuGraph.py  run_all.sh  run_all_cuGraph.sh
cuGraph_GPU/cugraph/python/cugraph/_skbuild/linux-x86_64-3.9/cmake-build/CMakeTmp/link_flags/gnu_ld_ignore/MODULE/SHARED/src/: CMakeLists.txt
(+54 files in other folders)
